force-app/main/default/objects/Provider_Information__c/Provider_Information__c.object-meta.xml
<CustomObject>
    <label>Provider Information</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Provider Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>