force-app/main/default/objects/Provider_Information__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider Informations</relationshipLabel>
    <relationshipName>Provider_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>