force-app/main/default/objects/Provider_Information__c/fields/Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type__c</fullName>
    <label>Degree/Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachelors of Arts</fullName>
            </value>
            <value>
                <fullName>Bachelors of Science</fullName>
            </value>
            <value>
                <fullName>BSW</fullName>
            </value>
            <value>
                <fullName>Masters in Behavioral Science</fullName>
            </value>
            <value>
                <fullName>Masters in Other</fullName>
            </value>
            <value>
                <fullName>MSW</fullName>
            </value>
            <value>
                <fullName>No College Degree</fullName>
            </value>
            <value>
                <fullName>Ph.D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>