force-app/main/default/objects/Provider_Information__c/fields/Does_medical_provider_speak_childs__c.field-meta.xml
<CustomField>
    <fullName>Does_medical_provider_speak_childs__c</fullName>
    <label>Does medical provider speak childs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>