force-app/main/default/objects/Provider_Information__c/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <label>Ext</label>
    <type>Phone</type>
</CustomField>