force-app/main/default/objects/Provider_Information__c/fields/Name_of_the_facility_of_Physician__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_facility_of_Physician__c</fullName>
    <label>Name of the facility of Physician</label>
    <length>100</length>
    <type>Text</type>
</CustomField>