force-app/main/default/objects/Provider_Information__c/fields/Name_of_the_Provider__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Provider__c</fullName>
    <label>Name of the Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>