force-app/main/default/objects/Provider_Information__c/fields/PCP_Primary_Care_Physician__c.field-meta.xml
<CustomField>
    <fullName>PCP_Primary_Care_Physician__c</fullName>
    <label>PCP(Primary Care Physician)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>