force-app/main/default/objects/Provider_Information__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>